# git-day2-practice

./: .env.compose  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  calculator.py  docker-compose.yml  pyproject.toml
src/git_day_practice/: api.py  app.py  settings.py
tests/: conftest.py  test_api.py  test_config.py  test_health.py  test_secure.py  test_validation.py
